--- a/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
+++ b/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
@@ -131,3 +131,25 @@ Our contributions can be summarized as:
 <table><tr><td width="50%">
 
 </td></tr></table>
+
+## References: 参考文献
+
+[^achiam2023gpt]: [**GPT-4**: GPT-4 Technical Report.](../../TextLM/2023.03.15_GPT-4.md) ArXiv:2303.08774.
+[^borsos2023audiolm]: [**AudioLM**: A Language Modeling Approach to Audio Generation.](2022.09.07_AudioLM.md) TASLP2023.
+[^bredell2023explicitly]: Explicitly Minimizing the Blur Error of Variational Autoencoders. ICLR2023.
+[^brown2020language]: [**GPT-3**: Language Models Are Few-Shot Learners.](../../TextLM/2020.05.28_GPT-3.md) NeurIPS2020.
+[^chen2024valle2]: [**VALL-E 2**: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers.](2024.06.08_VALL-E_2.md) ArXiv:2406.05370.
+[^defossez2024moshi]: [**Moshi**: A Speech-Text Foundation Model for Real-Time Dialogue.](../../SpokenDialogue/2024.09.17_Moshi.md) ArXiv:2410.00037.
+[^han2024valler]: [**VALL-E R**: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment.](2024.06.12_VALL-E_R.md) ArXiv:2406.07855.
+[^kingma2013auto]: [**VAE**: Auto-Encoding Variational Bayes.](../../_Basis/VAE.md) ICLR2014.
+[^lipman2022flow]: [**Flow Matching**: Flow Matching for Generative Modeling](../../Diffusion/2022.10.06_Flow_Matching.md) ArXiv:2210.02747.
+[^meng2024autoregressive]: [**MELLE**: Autoregressive Speech Synthesis without Vector Quantization.](2024.07.11_MELLE.md) ArXiv:2407.08551.
+[^panayotov2015librispeech]: [**LibriSpeech**: An ASR Corpus Based on Public Domain Audio Books.](../../../Datasets/2015.04.19_LibriSpeech.md) ICASSP2015.
+[^puvvada2024discrete]: Discrete Audio Representation as an Alternative to Mel-Spectrograms for Speaker and Speech Recognition. ICASSP2024.
+[^ren-etal-2022-revisiting]: Revisiting Over-Smoothness in Text to Speech. ACL2022.
+[^team2024gemini]: [**Gemini 1.5**: Unlocking Multimodal Understanding Across Millions of Tokens of Context.](../../TextLM/2024.03.08_Gemini_1.5.md) ArXiv:2403.05530.
+[^tomczak2018vae]: VAE with a VampPrior. AISTATS2018.
+[^turetzky2024continuous]: [**SALAD**: Continuous Speech Synthesis Using Per-Token Latent Diffusion.](../../Diffusion/2024.10.21_SALAD.md) ArXiv:2410.16048.
+[^vasquez2019melnet]: [**MelNet**: A Generative Model for Audio in the Frequency Domain.](../../Acoustic/2019.06.04_MelNet.md) ArXiv:1906.01083.
+[^wang2023valle]: [**VALL-E**: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers.](2023.01.05_VALL-E.md) ArXiv:2301.02111.
+[^zhu2024autoregressive]: [**KALL-E**: Autoregressive Speech Synthesis with Next-Distribution Prediction.](2024.12.22_KALL-E.md) ArXiv:2412.16846.
