--- a/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
+++ b/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
@@ -106,6 +106,69 @@ Our contributions can be summarized as:
 
 <table><tr><td width="50%">
 
+Zero-shot text-to-speech approaches are commonly categorized into autoregressive and non-autoregressive paradigms based on their output generation mechanisms.
+Autoregressive systems typically rely on language model architectures \citep{wang2023valle, kharitonov2023speak,yang2024interleaved}, whereas non-autoregressive implementations commonly employ diffusion models and analogous methodologies \citep{junaturalspeech, chen2024f5}.
+The subsequent discussion concentrates on research efforts investigating diverse representations under the framework of autoregressive language modeling architectures.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Discrete-Valued Token-Based TTS**
+
+TTS systems based on discrete representations utilize tokenized acoustic units derived from unsupervised or semi-supervised learning frameworks.
+These discrete tokens serve as compact and efficient representations of speech, capturing phonetic and prosodic attributes while reducing redundancy in data storage and computation.
+VALL-E \citep{wang2023valle} is a neural codec language model for text-to-speech synthesis that firstly redefines TTS as a conditional language modeling task, enabling high-quality, personalized speech generation from just a 3-second acoustic prompt, significantly advancing naturalness and speaker similarity.
+Recent studies further enhance VALL-E’s capabilities across multilingual generalization \citep{zhang2023vallex}, decoding efficiency \citep{chen2024valle2}, and robustness \citep{song2024ellav,xin2024ralle,han2024valler}, collectively advancing zero-shot speech synthesis in scalability, quality, and linguistic flexibility.
+In contrast to the unified language modeling approach of VALL-E and its variants, CosyVoice \citep{du2024cosyvoice} leverages an LLM for text-to-token conversion followed by a conditional flow-matching model for token-to-spectrogram synthesis, enhancing zero-shot voice cloning through end-to-end supervised speech token learning.
+
+</td></tr>
+<tr><td>
+
+**Continuous-Valued Token-Based TTS**
+
+Recent advances in continuous representation-based TTS systems eliminate the need for cumbersome codec training while achieving promising performance.
+Notably, MELLE \citep{meng2024autoregressive} proposes a single-pass language model architecture leveraging rich continuous acoustic representations, enabling precise control over prosodic features including pitch, rhythm, and timbre for high-fidelity speech synthesis.
+In contrast, SALAD \citep{turetzky2024continuous} is a zero-shot text-to-speech system that employs a per-token latent diffusion model on continuous representations, enabling variable-length audio generation through semantic tokens for contextual guidance and stopping control.
+While this method achieves superior intelligibility scores, it may face challenges related to time costs.
+Alternatively, KALL-E \citep{zhu2024autoregressive} adopts an autoregressive approach with WaveVAE to directly model speech distributions, bypassing both VAE and diffusion paradigms, demonstrating enhanced naturalness and speaker similarity through probabilistic waveform prediction.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Flow Matching**
+
+Flow matching~\citep{lipman2022flow} is a technique for learning a transformation that maps a prior distribution $p_0$ to a target distribution $q(x)$.
+The core idea of flow matching is to define a flow $\phi_t(x)$ that evolves over time, transforming the prior distribution $p_0$ into the target distribution $q(x)$.
+This flow $\phi_t(x)$ is governed by a vector field $v_t(x)$ and satisfies the following ordinary differential equation (ODE):
+
+$$
+\begin{aligned}
+\frac{d}{dt} \phi_t(x) = v_t(\phi_t(x)), \quad \phi_0(x) = x.
+\end{aligned}
+$$
+
+Here, $\phi_0(x) = x$ indicates that at time $t = 0$, the flow $\phi_t(x)$ is an identity mapping.
+
+While flow matching provides a principled framework for learning such transformations, it can be computationally expensive due to the difficulty of directly accessing the true vector field $u_t(x)$ and the target distribution $q(x)$.
+To address this, Conditional Flow Matching (CFM) is introduced.
+In CFM, the flow and the vector field are conditioned on the data $x_1$, making the optimization process more efficient.
+The objective of CFM is to minimize the discrepancy between the conditional true vector field $u_t$ and the learned conditional vector field $v_t(x; \theta)$.
+This discrepancy is measured by the following loss function:
+
+$$
+\begin{aligned}
+L_{\text{CFM}} = \mathbb{E}_{t, x_1, x} \left\| u_t - v_t(x; \theta) \right\|^2,
+\end{aligned}
+$$
+
+where time $t$ is uniformly sampled from $\mathcal{U}[0,1]$, data points $x_1$ are drawn from the target distribution $q(x_1)$, samples $x$ are generated through the conditional probability path $p_t(x|x_1)$, and the conditional vector field $u_t \equiv u_t(x|x_1)$.
+
+</td><td>
+
 </td></tr></table>
 
 ## 3·Methodology: 方法
@@ -136,7 +199,8 @@ Our contributions can be summarized as:
 
 [^achiam2023gpt]: [**GPT-4**: GPT-4 Technical Report.](../../TextLM/2023.03.15_GPT-4.md) ArXiv:2303.08774.
 [^borsos2023audiolm]: [**AudioLM**: A Language Modeling Approach to Audio Generation.](2022.09.07_AudioLM.md) TASLP2023.
-[^bredell2023explicitly]: Explicitly Minimizing the Blur Error of Variational Autoencoders. ICLR2023.
+[^bredell2023explicitly]: Explicitly Minimizing the Blur Error of Variational Autoencoders.
+ICLR2023.
 [^brown2020language]: [**GPT-3**: Language Models Are Few-Shot Learners.](../../TextLM/2020.05.28_GPT-3.md) NeurIPS2020.
 [^chen2024valle2]: [**VALL-E 2**: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers.](2024.06.08_VALL-E_2.md) ArXiv:2406.05370.
 [^defossez2024moshi]: [**Moshi**: A Speech-Text Foundation Model for Real-Time Dialogue.](../../SpokenDialogue/2024.09.17_Moshi.md) ArXiv:2410.00037.
@@ -145,10 +209,13 @@ Our contributions can be summarized as:
 [^lipman2022flow]: [**Flow Matching**: Flow Matching for Generative Modeling](../../Diffusion/2022.10.06_Flow_Matching.md) ArXiv:2210.02747.
 [^meng2024autoregressive]: [**MELLE**: Autoregressive Speech Synthesis without Vector Quantization.](2024.07.11_MELLE.md) ArXiv:2407.08551.
 [^panayotov2015librispeech]: [**LibriSpeech**: An ASR Corpus Based on Public Domain Audio Books.](../../../Datasets/2015.04.19_LibriSpeech.md) ICASSP2015.
-[^puvvada2024discrete]: Discrete Audio Representation as an Alternative to Mel-Spectrograms for Speaker and Speech Recognition. ICASSP2024.
-[^ren-etal-2022-revisiting]: Revisiting Over-Smoothness in Text to Speech. ACL2022.
+[^puvvada2024discrete]: Discrete Audio Representation as an Alternative to Mel-Spectrograms for Speaker and Speech Recognition.
+ICASSP2024.
+[^ren-etal-2022-revisiting]: Revisiting Over-Smoothness in Text to Speech.
+ACL2022.
 [^team2024gemini]: [**Gemini 1.5**: Unlocking Multimodal Understanding Across Millions of Tokens of Context.](../../TextLM/2024.03.08_Gemini_1.5.md) ArXiv:2403.05530.
-[^tomczak2018vae]: VAE with a VampPrior. AISTATS2018.
+[^tomczak2018vae]: VAE with a VampPrior.
+AISTATS2018.
 [^turetzky2024continuous]: [**SALAD**: Continuous Speech Synthesis Using Per-Token Latent Diffusion.](../../Diffusion/2024.10.21_SALAD.md) ArXiv:2410.16048.
 [^vasquez2019melnet]: [**MelNet**: A Generative Model for Audio in the Frequency Domain.](../../Acoustic/2019.06.04_MelNet.md) ArXiv:1906.01083.
 [^wang2023valle]: [**VALL-E**: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers.](2023.01.05_VALL-E.md) ArXiv:2301.02111.
